--- a/css/eshop.scss
+++ b/css/eshop.scss
@@ -203,7 +203,7 @@ body {
     max-width: 650px;
     justify-content: space-around;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 50px; 
 }
 
 .products-container .far{
@@ -279,7 +279,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 405px;
+    
     h1 {
         margin: 20px 0 20px 0; //pridal som margin-top: 20px;
         padding: 0px;
@@ -312,25 +312,28 @@ body {
         }
     }
     
-    .goodbox {        
-        display: flex;
-        justify-content: space-between;
-        .goods {
+
+    .good-box {        
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            text-align: center;
-            height: 377px;
-            border:2px solid transparent;
-            .cart {
+            flex-wrap:wrap;
+            justify-content: space-between;
+            width:1110px;
+            .goods {
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
-                align-items: center;
-                visibility: hidden;
-                background-color: rgb(231, 72, 76);
-                height: 40px;
-                border:none;
-                & a {
+                text-align: center;
+                height: 377px;
+                border:2px solid transparent;
+                .cart {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    visibility: hidden;
+                    background-color: rgb(231, 72, 76);
+                    height: 40px;
+                    border:none;
+                    & a {
                     color: white;
                     text-transform: uppercase;
                     font-size: 13px;
@@ -341,14 +344,7 @@ body {
 
             }
         }
-        .goods:hover {
-            cursor: pointer;
-            border: 2px solid rgb(235, 235, 235);
-            box-shadow: 0 4px 20px 0 rgba(218, 217, 217, 0.9), 0 6px 20px 0 rgba(218, 216, 216, 0.4);
-            .cart {
-                visibility: visible;
-            }
-        }
+       
         .tool-box {
             position: relative;
             background-repeat: no-repeat;
@@ -380,10 +376,22 @@ body {
                     margin-top: 4px;
                 }
             }
-        }
-        
-        
+        } 
+    
+        .goods:hover {
+            cursor: pointer;
+            border: 2px solid rgb(235, 235, 235);
+            box-shadow: 0 4px 20px 0 rgba(218, 217, 217, 0.9), 0 6px 20px 0 rgba(218, 216, 216, 0.4);
+            .cart {
+                visibility: visible;
+            }
+        } 
     }
+    .good-box::after { //posunie poslednú položku toparu pri vykreslení doľava(na začiatok, aby nesotala medzi tovarom medzera)
+        content:"";
+        flex:0 1 47.7%; 
+    }
+    
 }
 
 .part-3 {
