--- a/css/eshop.scss
+++ b/css/eshop.scss
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    outline: none; //vsetky objekty na kt. sa klikne nebudu mat modry ranik
 }
 
 body {
@@ -34,19 +33,19 @@ body {
         margin: 0 auto;
         background-color: black;
         list-style-type: none;
-        a {
+        & a {
             text-decoration: none;
             padding: 7px 20px;
             color: rgb(140, 140, 140);
             font-size: 13px;
             border-right: 1px solid rgb(51, 51, 51);
             border-left: 1px solid rgb(51, 51, 51);
-            &.fas {
+            .fas {
                 color: rgb(140, 140, 140);
             }
         }
-        a:hover{
-            color:white;
+        a:hover {
+            color: white;
         }
     }
 }
@@ -106,7 +105,6 @@ body {
             justify-content: flex-end;
             & li {
                 padding-left: 30px;
-               
             }
         }
     }
@@ -200,78 +198,90 @@ body {
 // -------------------------CART PAGE-------------------------
 
 .products-container {
-    max-width: 650px;
-    justify-content: space-around;
+    padding: 10px;
+    border: 1px solid black;
+    min-width: 650px;
+    justify-content: space-around; 
     margin: 0 auto;
     margin-top: 50px; 
 }
 
+.products {
+    text-align: center;
+}
+
+.price {
+    padding-left: 10px;
+    text-align: center;
+}
+
 .products-container .far{
-    font-size: 25px;
-    color: rgb(231, 72, 76);
-    margin-left: 10px;
-    margin-right: 10px;
+    color: red;
+    margin: 0 5px;
     cursor: pointer;
 }
 
 .product-header {
-    width: 100%;
-    max-width: 650px;
-    display: flex;
-    justify-content: flex-start;
-    border-bottom: 4px solid lightgrey;
-    margin: 0 auto;
+    border-bottom: 1px solid lightgrey;
 }
 
-.product-title {
-    width: 45%;
+tbody td {
+    border-bottom: 1px solid lightgrey;
 }
 
-.price {
-    width: 15%;
-    border-bottom: 1px solid lightgray;
-    align-items: center;
-}
+// .product-header {
+//     width: 100%;
+//     max-width: 650px;
+//     display: flex;
+//     justify-content: flex-start;
+//     border-bottom: 4px solid lightgrey;
+//     margin: 0 auto;
+// }
+
+// .product-title {
+//     width: 45%;
+// }
+
+// .price {
+//     width: 15%;
+//     display: flex;
+//     align-items: center;
+// }
 
 .quantity {
-    width: 30%;
-    border-bottom: 1px solid lightgrey;
-    display: flex;
-    align-items: center;
+    padding: 0 10px;
+    text-align: center;
 }
 
 .total {
-    width: 10%;
-    border-bottom: 1px solid lightgrey;
-    display: flex;
-    align-items: center;
+    text-align: center;
 }
 
-.product {
-    width: 45%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 10px 0;
-    border-bottom: 1px solid lightgrey;
-}
-.fas {
-    padding: 0 5px;
-}
+// .product {
+//     width: 45%;
+//     display: flex;
+//     justify-content: space-around;
+//     align-items: center;
+//     padding: 10px 0;
+//     border-bottom: 1px solid lightgrey;
+// }
+// .fas {
+//     padding: 0 5px;
+// }
 
-.basketTotalContainer {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    padding: 10px 0;
-}
+// .basketTotalContainer {
+//     display: flex;
+//     justify-content: flex-end;
+//     width: 100%;
+//     padding: 10px 0;
+// }
 
-.basketTotalTitle {
-    width: 30%;
-}
-.basketTotal {
-    width: 10%;
-}
+// .basketTotalTitle {
+//     width: 30%;
+// }
+// .basketTotal {
+//     width: 10%;
+// }
 //------------------------------CART-----------------------------
 .part-3,
 .part-5,
@@ -279,7 +289,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    padding: 0 405px;
     h1 {
         margin: 20px 0 20px 0; //pridal som margin-top: 20px;
         padding: 0px;
@@ -311,47 +321,69 @@ body {
             }
         }
     }
-    
-
-    .good-box {        
+    .goodbox-2 {
+        margin-bottom: 40px;
+    }
+    .goodbox-3 {
+        margin-bottom: 30px;
+    }
+    .goodbox-1,
+    .goodbox-2,
+    .goodbox-3 {
+        display: flex;
+        justify-content: space-between;
+        .goods {
             display: flex;
-            flex-wrap:wrap;
-            justify-content: space-between;
-            width:1110px;
-            .goods {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                text-align: center;
-                height: 377px;
-                border:2px solid transparent;
-                .cart {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    visibility: hidden;
-                    background-color: rgb(231, 72, 76);
-                    height: 40px;
-                    border:none;
-                    & a {
-                    color: white;
-                    text-transform: uppercase;
-                    font-size: 13px;
-                    font-weight: 600;
-                    text-decoration: none;
-                    border:none;
-                }
-
-            }
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+            height: 377px;
         }
-       
         .tool-box {
             position: relative;
             background-repeat: no-repeat;
             background-size: cover;
             height: 235px;
-            width: 235px;
-        }                 
+            width: 220px;
+        }
+        .pict-1 {
+            background-image: url("../img/product_1.png");
+        }
+        .pict-2 {
+            background-image: url("../img/product_2.png");
+            border-left: 1px solid rgb(235, 235, 235);
+            border-right: 1px solid rgb(235, 235, 235);
+        }
+        .pict-3 {
+            background-image: url("../img/product_3.png");
+        }
+        .pict-4 {
+            background-image: url("../img/product_4.png");
+            border-left: 1px solid rgb(235, 235, 235);
+            border-right: 1px solid rgb(235, 235, 235);
+        }
+        .pict-5 {
+            background-image: url("../img/product_5.png");
+        }
+        .pict-6 {
+            background-image: url("../img/product_6.png");
+        }
+        .pict-7 {
+            background-image: url("../img/product_7.png");
+            border-left: 1px solid rgb(235, 235, 235);
+            border-right: 1px solid rgb(235, 235, 235);
+        }
+        .pict-8 {
+            background-image: url("../img/product_8.png");
+        }
+        .pict-9 {
+            background-image: url("../img/product_9.png");
+            border-left: 1px solid rgb(235, 235, 235);
+            border-right: 1px solid rgb(235, 235, 235);
+        }
+        .pict-10 {
+            background-image: url("../img/product_10.png");
+        }
         .description {
             p {
                 color: black;
@@ -376,22 +408,34 @@ body {
                     margin-top: 4px;
                 }
             }
-        } 
-    
-        .goods:hover {
-            cursor: pointer;
-            border: 2px solid rgb(235, 235, 235);
-            box-shadow: 0 4px 20px 0 rgba(218, 217, 217, 0.9), 0 6px 20px 0 rgba(218, 216, 216, 0.4);
-            .cart {
-                visibility: visible;
+        }
+        .wall {
+            border-left: 1px solid rgb(235, 235, 235);
+            border-right: 1px solid rgb(235, 235, 235);
+        }
+        .cart {
+            display: flex;
+            visibility: hidden;
+            background-color: rgb(231, 72, 76);
+            height: 40px;
+            & a {
+                color: white;
+                text-transform: uppercase;
+                font-size: 13px;
+                font-weight: 600;
+                text-decoration: none;
+                padding: 10px 0 0 70px;
             }
-        } 
+        }
     }
-    .good-box::after { //posunie poslednú položku toparu pri vykreslení doľava(na začiatok, aby nesotala medzi tovarom medzera)
-        content:"";
-        flex:0 1 47.7%; 
+    .goods:hover {
+        cursor: pointer;
+        border: 2px solid rgb(235, 235, 235);
+        box-shadow: 0 4px 20px 0 rgba(218, 217, 217, 0.9), 0 6px 20px 0 rgba(218, 216, 216, 0.4);
+        .cart {
+            visibility: visible;
+        }
     }
-    
 }
 
 .part-3 {
@@ -602,33 +646,30 @@ body {
         display: flex;
         margin: 0px;
         padding: 0px;
-        //font-weight: 900;
-        input,
+        font-weight: 900;
+        & input,
         button {
             font-size: 14px;
             border: none;
+            font-weight: 600;
         }
-        input {
+        & input {
             color: black;
             font-family: 'Poppins', sans-serif;
-            font-weight: 500;
-            font-size: 14px;
-            width: 350px;
-            padding: 10px 0 10px 10px;
+            font-weight: 600;
+            width: 300px;
+            padding: 15px 0 15px 15px;
             .text::placeholder {
                 color: lightgrey;
             }
-        
         }
         button {
             background-color: rgb(231, 72, 76);
-            width: 60px;
+            width: 160px;
             color: white;
             text-transform: uppercase;
             text-decoration: none;
             cursor: pointer;
-            font-size:20px;
-            
         }
     }
 }
