--- a/css/eshop.css
+++ b/css/eshop.css
@@ -1,6 +1,7 @@
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  outline: none;
 }
 
 body {
@@ -61,7 +62,7 @@ body {
   border-left: 1px solid #333333;
 }
 
-.head-1 #navbar-1 a .fas {
+.head-1 #navbar-1 a.fas {
   color: #8c8c8c;
 }
 
@@ -275,45 +276,103 @@ body {
 }
 
 .products-container {
-  padding: 10px;
-  border: 1px solid black;
-  min-width: 650px;
+  max-width: 650px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   margin: 0 auto;
   margin-top: 50px;
 }
 
-.products {
-  text-align: center;
-}
-
-.price {
-  padding-left: 10px;
-  text-align: center;
-}
-
 .products-container .far {
-  color: red;
-  margin: 0 5px;
+  font-size: 25px;
+  color: #e7484c;
+  margin-left: 10px;
+  margin-right: 10px;
   cursor: pointer;
 }
 
 .product-header {
-  border-bottom: 1px solid lightgrey;
+  width: 100%;
+  max-width: 650px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  border-bottom: 4px solid lightgrey;
+  margin: 0 auto;
 }
 
-tbody td {
-  border-bottom: 1px solid lightgrey;
+.product-title {
+  width: 45%;
+}
+
+.price {
+  width: 15%;
+  border-bottom: 1px solid lightgray;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .quantity {
-  padding: 0 10px;
-  text-align: center;
+  width: 30%;
+  border-bottom: 1px solid lightgrey;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .total {
-  text-align: center;
+  width: 10%;
+  border-bottom: 1px solid lightgrey;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.product {
+  width: 45%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 0;
+  border-bottom: 1px solid lightgrey;
+}
+
+.fas {
+  padding: 0 5px;
+}
+
+.basketTotalContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 100%;
+  padding: 10px 0;
+}
+
+.basketTotalTitle {
+  width: 30%;
+}
+
+.basketTotal {
+  width: 10%;
 }
 
 .part-3,
@@ -329,7 +388,6 @@ tbody td {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 405px;
 }
 
 .part-3 h1,
@@ -380,44 +438,23 @@ tbody td {
   padding: 10px 40px;
 }
 
-.part-3 .goodbox-2,
-.part-5 .goodbox-2,
-.part-6 .goodbox-2 {
-  margin-bottom: 40px;
-}
-
-.part-3 .goodbox-3,
-.part-5 .goodbox-3,
-.part-6 .goodbox-3 {
-  margin-bottom: 30px;
-}
-
-.part-3 .goodbox-1,
-.part-3 .goodbox-2,
-.part-3 .goodbox-3,
-.part-5 .goodbox-1,
-.part-5 .goodbox-2,
-.part-5 .goodbox-3,
-.part-6 .goodbox-1,
-.part-6 .goodbox-2,
-.part-6 .goodbox-3 {
+.part-3 .good-box,
+.part-5 .good-box,
+.part-6 .good-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 1110px;
 }
 
-.part-3 .goodbox-1 .goods,
-.part-3 .goodbox-2 .goods,
-.part-3 .goodbox-3 .goods,
-.part-5 .goodbox-1 .goods,
-.part-5 .goodbox-2 .goods,
-.part-5 .goodbox-3 .goods,
-.part-6 .goodbox-1 .goods,
-.part-6 .goodbox-2 .goods,
-.part-6 .goodbox-3 .goods {
+.part-3 .good-box .goods,
+.part-5 .good-box .goods,
+.part-6 .good-box .goods {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -430,176 +467,60 @@ tbody td {
           justify-content: center;
   text-align: center;
   height: 377px;
+  border: 2px solid transparent;
 }
 
-.part-3 .goodbox-1 .tool-box,
-.part-3 .goodbox-2 .tool-box,
-.part-3 .goodbox-3 .tool-box,
-.part-5 .goodbox-1 .tool-box,
-.part-5 .goodbox-2 .tool-box,
-.part-5 .goodbox-3 .tool-box,
-.part-6 .goodbox-1 .tool-box,
-.part-6 .goodbox-2 .tool-box,
-.part-6 .goodbox-3 .tool-box {
+.part-3 .good-box .goods .cart,
+.part-5 .good-box .goods .cart,
+.part-6 .good-box .goods .cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  visibility: hidden;
+  background-color: #e7484c;
+  height: 40px;
+  border: none;
+}
+
+.part-3 .good-box .goods .cart a,
+.part-5 .good-box .goods .cart a,
+.part-6 .good-box .goods .cart a {
+  color: white;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 600;
+  text-decoration: none;
+  border: none;
+}
+
+.part-3 .good-box .tool-box,
+.part-5 .good-box .tool-box,
+.part-6 .good-box .tool-box {
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
   height: 235px;
-  width: 220px;
+  width: 235px;
 }
 
-.part-3 .goodbox-1 .pict-1,
-.part-3 .goodbox-2 .pict-1,
-.part-3 .goodbox-3 .pict-1,
-.part-5 .goodbox-1 .pict-1,
-.part-5 .goodbox-2 .pict-1,
-.part-5 .goodbox-3 .pict-1,
-.part-6 .goodbox-1 .pict-1,
-.part-6 .goodbox-2 .pict-1,
-.part-6 .goodbox-3 .pict-1 {
-  background-image: url("../img/product_1.png");
-}
-
-.part-3 .goodbox-1 .pict-2,
-.part-3 .goodbox-2 .pict-2,
-.part-3 .goodbox-3 .pict-2,
-.part-5 .goodbox-1 .pict-2,
-.part-5 .goodbox-2 .pict-2,
-.part-5 .goodbox-3 .pict-2,
-.part-6 .goodbox-1 .pict-2,
-.part-6 .goodbox-2 .pict-2,
-.part-6 .goodbox-3 .pict-2 {
-  background-image: url("../img/product_2.png");
-  border-left: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
-}
-
-.part-3 .goodbox-1 .pict-3,
-.part-3 .goodbox-2 .pict-3,
-.part-3 .goodbox-3 .pict-3,
-.part-5 .goodbox-1 .pict-3,
-.part-5 .goodbox-2 .pict-3,
-.part-5 .goodbox-3 .pict-3,
-.part-6 .goodbox-1 .pict-3,
-.part-6 .goodbox-2 .pict-3,
-.part-6 .goodbox-3 .pict-3 {
-  background-image: url("../img/product_3.png");
-}
-
-.part-3 .goodbox-1 .pict-4,
-.part-3 .goodbox-2 .pict-4,
-.part-3 .goodbox-3 .pict-4,
-.part-5 .goodbox-1 .pict-4,
-.part-5 .goodbox-2 .pict-4,
-.part-5 .goodbox-3 .pict-4,
-.part-6 .goodbox-1 .pict-4,
-.part-6 .goodbox-2 .pict-4,
-.part-6 .goodbox-3 .pict-4 {
-  background-image: url("../img/product_4.png");
-  border-left: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
-}
-
-.part-3 .goodbox-1 .pict-5,
-.part-3 .goodbox-2 .pict-5,
-.part-3 .goodbox-3 .pict-5,
-.part-5 .goodbox-1 .pict-5,
-.part-5 .goodbox-2 .pict-5,
-.part-5 .goodbox-3 .pict-5,
-.part-6 .goodbox-1 .pict-5,
-.part-6 .goodbox-2 .pict-5,
-.part-6 .goodbox-3 .pict-5 {
-  background-image: url("../img/product_5.png");
-}
-
-.part-3 .goodbox-1 .pict-6,
-.part-3 .goodbox-2 .pict-6,
-.part-3 .goodbox-3 .pict-6,
-.part-5 .goodbox-1 .pict-6,
-.part-5 .goodbox-2 .pict-6,
-.part-5 .goodbox-3 .pict-6,
-.part-6 .goodbox-1 .pict-6,
-.part-6 .goodbox-2 .pict-6,
-.part-6 .goodbox-3 .pict-6 {
-  background-image: url("../img/product_6.png");
-}
-
-.part-3 .goodbox-1 .pict-7,
-.part-3 .goodbox-2 .pict-7,
-.part-3 .goodbox-3 .pict-7,
-.part-5 .goodbox-1 .pict-7,
-.part-5 .goodbox-2 .pict-7,
-.part-5 .goodbox-3 .pict-7,
-.part-6 .goodbox-1 .pict-7,
-.part-6 .goodbox-2 .pict-7,
-.part-6 .goodbox-3 .pict-7 {
-  background-image: url("../img/product_7.png");
-  border-left: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
-}
-
-.part-3 .goodbox-1 .pict-8,
-.part-3 .goodbox-2 .pict-8,
-.part-3 .goodbox-3 .pict-8,
-.part-5 .goodbox-1 .pict-8,
-.part-5 .goodbox-2 .pict-8,
-.part-5 .goodbox-3 .pict-8,
-.part-6 .goodbox-1 .pict-8,
-.part-6 .goodbox-2 .pict-8,
-.part-6 .goodbox-3 .pict-8 {
-  background-image: url("../img/product_8.png");
-}
-
-.part-3 .goodbox-1 .pict-9,
-.part-3 .goodbox-2 .pict-9,
-.part-3 .goodbox-3 .pict-9,
-.part-5 .goodbox-1 .pict-9,
-.part-5 .goodbox-2 .pict-9,
-.part-5 .goodbox-3 .pict-9,
-.part-6 .goodbox-1 .pict-9,
-.part-6 .goodbox-2 .pict-9,
-.part-6 .goodbox-3 .pict-9 {
-  background-image: url("../img/product_9.png");
-  border-left: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
-}
-
-.part-3 .goodbox-1 .pict-10,
-.part-3 .goodbox-2 .pict-10,
-.part-3 .goodbox-3 .pict-10,
-.part-5 .goodbox-1 .pict-10,
-.part-5 .goodbox-2 .pict-10,
-.part-5 .goodbox-3 .pict-10,
-.part-6 .goodbox-1 .pict-10,
-.part-6 .goodbox-2 .pict-10,
-.part-6 .goodbox-3 .pict-10 {
-  background-image: url("../img/product_10.png");
-}
-
-.part-3 .goodbox-1 .description p,
-.part-3 .goodbox-2 .description p,
-.part-3 .goodbox-3 .description p,
-.part-5 .goodbox-1 .description p,
-.part-5 .goodbox-2 .description p,
-.part-5 .goodbox-3 .description p,
-.part-6 .goodbox-1 .description p,
-.part-6 .goodbox-2 .description p,
-.part-6 .goodbox-3 .description p {
+.part-3 .good-box .description p,
+.part-5 .good-box .description p,
+.part-6 .good-box .description p {
   color: black;
   font-size: 14px;
   font-weight: 500;
   margin-bottom: 10px;
 }
 
-.part-3 .goodbox-1 .description .values,
-.part-3 .goodbox-2 .description .values,
-.part-3 .goodbox-3 .description .values,
-.part-5 .goodbox-1 .description .values,
-.part-5 .goodbox-2 .description .values,
-.part-5 .goodbox-3 .description .values,
-.part-6 .goodbox-1 .description .values,
-.part-6 .goodbox-2 .description .values,
-.part-6 .goodbox-3 .description .values {
+.part-3 .good-box .description .values,
+.part-5 .good-box .description .values,
+.part-6 .good-box .description .values {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -610,95 +531,45 @@ tbody td {
   font-weight: 500;
 }
 
-.part-3 .goodbox-1 .description .values h4,
-.part-3 .goodbox-2 .description .values h4,
-.part-3 .goodbox-3 .description .values h4,
-.part-5 .goodbox-1 .description .values h4,
-.part-5 .goodbox-2 .description .values h4,
-.part-5 .goodbox-3 .description .values h4,
-.part-6 .goodbox-1 .description .values h4,
-.part-6 .goodbox-2 .description .values h4,
-.part-6 .goodbox-3 .description .values h4 {
+.part-3 .good-box .description .values h4,
+.part-5 .good-box .description .values h4,
+.part-6 .good-box .description .values h4 {
   color: #e7484c;
   font-weight: 600;
   margin: 0px;
   padding-right: 8px;
 }
 
-.part-3 .goodbox-1 .description .values span,
-.part-3 .goodbox-2 .description .values span,
-.part-3 .goodbox-3 .description .values span,
-.part-5 .goodbox-1 .description .values span,
-.part-5 .goodbox-2 .description .values span,
-.part-5 .goodbox-3 .description .values span,
-.part-6 .goodbox-1 .description .values span,
-.part-6 .goodbox-2 .description .values span,
-.part-6 .goodbox-3 .description .values span {
+.part-3 .good-box .description .values span,
+.part-5 .good-box .description .values span,
+.part-6 .good-box .description .values span {
   color: #b5aec3;
   font-size: 12px;
   margin-top: 4px;
 }
 
-.part-3 .goodbox-1 .wall,
-.part-3 .goodbox-2 .wall,
-.part-3 .goodbox-3 .wall,
-.part-5 .goodbox-1 .wall,
-.part-5 .goodbox-2 .wall,
-.part-5 .goodbox-3 .wall,
-.part-6 .goodbox-1 .wall,
-.part-6 .goodbox-2 .wall,
-.part-6 .goodbox-3 .wall {
-  border-left: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
-}
-
-.part-3 .goodbox-1 .cart,
-.part-3 .goodbox-2 .cart,
-.part-3 .goodbox-3 .cart,
-.part-5 .goodbox-1 .cart,
-.part-5 .goodbox-2 .cart,
-.part-5 .goodbox-3 .cart,
-.part-6 .goodbox-1 .cart,
-.part-6 .goodbox-2 .cart,
-.part-6 .goodbox-3 .cart {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  visibility: hidden;
-  background-color: #e7484c;
-  height: 40px;
-}
-
-.part-3 .goodbox-1 .cart a,
-.part-3 .goodbox-2 .cart a,
-.part-3 .goodbox-3 .cart a,
-.part-5 .goodbox-1 .cart a,
-.part-5 .goodbox-2 .cart a,
-.part-5 .goodbox-3 .cart a,
-.part-6 .goodbox-1 .cart a,
-.part-6 .goodbox-2 .cart a,
-.part-6 .goodbox-3 .cart a {
-  color: white;
-  text-transform: uppercase;
-  font-size: 13px;
-  font-weight: 600;
-  text-decoration: none;
-  padding: 10px 0 0 70px;
-}
-
-.part-3 .goods:hover,
-.part-5 .goods:hover,
-.part-6 .goods:hover {
+.part-3 .good-box .goods:hover,
+.part-5 .good-box .goods:hover,
+.part-6 .good-box .goods:hover {
   cursor: pointer;
   border: 2px solid #ebebeb;
   -webkit-box-shadow: 0 4px 20px 0 rgba(218, 217, 217, 0.9), 0 6px 20px 0 rgba(218, 216, 216, 0.4);
           box-shadow: 0 4px 20px 0 rgba(218, 217, 217, 0.9), 0 6px 20px 0 rgba(218, 216, 216, 0.4);
 }
 
-.part-3 .goods:hover .cart,
-.part-5 .goods:hover .cart,
-.part-6 .goods:hover .cart {
+.part-3 .good-box .goods:hover .cart,
+.part-5 .good-box .goods:hover .cart,
+.part-6 .good-box .goods:hover .cart {
   visibility: visible;
+}
+
+.part-3 .good-box::after,
+.part-5 .good-box::after,
+.part-6 .good-box::after {
+  content: "";
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 47.7%;
+          flex: 0 1 47.7%;
 }
 
 .part-3 .line {
@@ -992,22 +863,21 @@ tbody td {
   display: flex;
   margin: 0px;
   padding: 0px;
-  font-weight: 900;
 }
 
 .footer-1 .payment input,
 .footer-1 .payment button {
   font-size: 14px;
   border: none;
-  font-weight: 600;
 }
 
 .footer-1 .payment input {
   color: black;
   font-family: 'Poppins', sans-serif;
-  font-weight: 600;
-  width: 300px;
-  padding: 15px 0 15px 15px;
+  font-weight: 500;
+  font-size: 14px;
+  width: 350px;
+  padding: 10px 0 10px 10px;
 }
 
 .footer-1 .payment input .text::-webkit-input-placeholder {
@@ -1028,11 +898,12 @@ tbody td {
 
 .footer-1 .payment button {
   background-color: #e7484c;
-  width: 160px;
+  width: 60px;
   color: white;
   text-transform: uppercase;
   text-decoration: none;
   cursor: pointer;
+  font-size: 20px;
 }
 
 .footer-2 {
