--- a/css/eshop.scss
+++ b/css/eshop.scss
@@ -334,7 +334,7 @@ tbody td {
             flex-direction: column;
             justify-content: center;
             text-align: center;
-            height: 377px;
+            //height: 377px;
             border:2px solid transparent;
             .cart {
                 display: flex;
