--- a/css/eshop.scss
+++ b/css/eshop.scss
@@ -43,6 +43,7 @@ body {
             border-left: 1px solid rgb(51, 51, 51);
             .fas {
                 color: rgb(140, 140, 140);
+                padding: 0 5px;
             }
         }
         a:hover {
